[feat] - add emailbody api
