# src/main/java/it/pagopa/pn/templates/engine/rest/PdfTemplateApiController.java
@@ -87,8 +87,15 @@ public class PdfTemplateApiController implements PdfTemplateApi {
 
     @Override
     public Mono<ResponseEntity<Resource>> notificationAARForSMS(String xLanguage,
-                                                         Mono<Notification> request,
-                                                         final ServerWebExchange exchange) {
+                                                                Mono<Notification> request,
+                                                                final ServerWebExchange exchange) {
+        return Mono.empty();
+    }
+
+    @Override
+    public Mono<ResponseEntity<org.springframework.core.io.Resource>> emailbody(String xLanguage,
+                                                                                Mono<Emailbody> request,
+                                                                                final ServerWebExchange exchange) {
         return Mono.empty();
     }
 }
